# quest-vd-wired

./: .gitignore  DEVELOP.md  README.md  release
.cargo/: config.toml
android-v4/: gradle.properties  settings.gradle.kts
android-v4/app/: build.gradle.kts  proguard-rules.pro
android-v4/app/src/main/: AndroidManifest.xml
android-v4/app/src/main/assets/: THIRD_PARTY_NOTICES.md
android-v4/app/src/main/java/hev/htproxy/: TProxyService.kt
android-v4/app/src/main/jni/: Android.mk  Application.mk
android-v4/app/src/main/res/drawable/: ic_usb_24.xml
android-v4/app/src/main/res/values/: strings.xml  styles.xml
android-v4/patches/: hev-lifecycle.patch  hev-lwip-window.patch  hev-split-udp-port.patch  hev-timeout-phases.patch
android-v4/scripts/: fetch-hev.sh  test-hev-timeout-config.sh
android-v4/tests/: hev_timeout_behavior_test.c  hev_timeout_config_test.c  hev_timeout_phases_test.c
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/genymobile/gnirehtet/: Forwarder.java  GnirehtetActivity.java  GnirehtetService.java  GnirehtetStatusActivity.java  Notifier.java  PersistentRelayTunnel.java  RelayTunnelProvider.java  VpnConfiguration.java  VpnLifecycle.java
app/src/main/res/values/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/test/java/com/genymobile/gnirehtet/: TestPersistentRelayTunnelShutdown.java  TestVpnConfiguration.java  TestVpnLifecycle.java
benchmarks/: result.schema.json
benchmarks/comparators/tun2proxy/: Cargo.toml  THIRD_PARTY_NOTICES.md
benchmarks/comparators/tun2proxy/src/: adapter.rs  lib.rs  main.rs  result.rs
benchmarks/comparators/tun2proxy/tests/: cli.rs
benchmarks/windows/: Invoke-StartStopGate.ps1
gradle/wrapper/: gradle-wrapper.properties
host-rust/: Cargo.toml  deny.toml
host-rust/crates/gnirehtet-vd/: Cargo.toml  build.rs
host-rust/crates/gnirehtet-vd/assets/: windows.rc
host-rust/crates/gnirehtet-vd/src/: adb.rs  control.rs  diagnostics.rs  embedded.rs  lib.rs  main.rs  protocol.rs  runtime.rs  socks.rs  state.rs  udp.rs
host-rust/crates/gnirehtet-vd/tests/: synthetic_udp.rs
host-rust/fuzz/: Cargo.toml
host-rust/fuzz/fuzz_targets/: gnr4_frame.rs  hev_udp_frame.rs  socks_request.rs
protocol/fixtures/: gnr4-status-v4.hex
relay-java/scripts/: README.txt  gnirehtet  gnirehtet-get-adb.cmd  gnirehtet-launcher.cmd  gnirehtet-repair.cmd  gnirehtet-run.cmd  gnirehtet.cmd
relay-java/src/main/java/com/genymobile/gnirehtet/: AdbMonitor.java  AndroidServiceStatus.java  CommandLineArguments.java  Main.java  ProcessRunner.java  VirtualDesktopDoctor.java
relay-java/src/test/java/com/genymobile/gnirehtet/: AdbMonitorTest.java  AndroidServiceStatusTest.java  CommandLineArgumentsTest.java  MainStatusTest.java  ProcessRunnerTest.java  VirtualDesktopDoctorTest.java
scripts/: build_v4_android_rc.sh  build_v4_windows_rc.ps1  compare_apk_payload.py  generate_rust_notices.py  generate_v4_native_sbom.py  normalize_windows_pe.py  package_v4_windows_zip.py  sanitize_rust_sbom.py  verify_embedded_apk.py  verify_v3_apk.sh  verify_v4_apk.sh  verify_windows_release.py  write_sha256.py
scripts/tests/: test_package_v4_windows_zip.py  test_release_tools.py  test_sanitize_rust_sbom.py
(+44 files in other folders)
