[package]
name = "gnirehtet-tun2proxy-comparator"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false
rust-version = "1.88"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "signal", "time"] }
tun = { version = "0.8.13", features = ["async"] }
tun2proxy = { git = "https://github.com/tun2proxy/tun2proxy.git", rev = "eed123fbbec06295bf83f9be36d5a0f64ed9a8cb" }

[dev-dependencies]
tempfile = "3.20"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
